--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="de">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Datei hochladen</title>
 </head>
 <body>
     <h1>Datei hochladen</h1>
-    <form action="upload.php" method="post" enctype="multipart/form-data">
+    <form method="post" action="upload.php" enctype="multipart/form-data">
         <input type="file" name="file" required>
         <button type="submit">Hochladen</button>
     </form>
